--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,7 +6,7 @@
 @import './btn.scss';
 
 body {
-  height: 100%;
+  position: absolute; left: 0;right: 0;top: 0;bottom: 0;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
@@ -22,8 +22,13 @@ html {
   box-sizing: border-box;
 }
 
-#app{
-  height: 100%;
+#app {
+
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
 }
 
 *,
