--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -3,12 +3,9 @@
   // 侧边栏
 
   .hideSidebar {
-    .sidebar-container {
-      width: 36px !important;
-    }
-    .main-container {
-      margin-left: 36px;
-    }
+    //.sidebar-container {
+    //  width: 36px !important;
+    //}
     .submenu-title-noDropdown {
       padding-left: 10px !important;
       position: relative;
