--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,5 +9,5 @@ $panGreen: #30B08F;
 
 //sidebar
 $menuBg:#304156;
-$subMenuBg:#1f2d3d;
-$menuHover:#001528;
+$subMenuBg:#E0E5EE;
+$menuHover:#FFFFFF;
