--- a/src/styles/globalstyle.scss
+++ b/src/styles/globalstyle.scss
@@ -64,6 +64,10 @@ body {
   color: white !important;
 }
 
+.el-button--success {
+
+  color: white !important;
+}
 
 .el-button--primary.is-plain {
 
