--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,5 +9,5 @@ $panGreen: #30B08F;
 
 //sidebar
 $menuBg:#304156;
-$subMenuBg:#E0E5EE;
-$menuHover:#FFFFFF;
+$subMenuBg:#333333;
+$menuHover:#4B74FF;
