--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -29,6 +29,12 @@
       }
     }
   }
+
+  .el-menu {
+
+    border-right: none;
+  }
+
   .nest-menu .el-submenu>.el-submenu__title,
   .el-submenu .el-menu-item {
     min-width: 180px !important;
