--- a/src/styles/globalstyle.scss
+++ b/src/styles/globalstyle.scss
@@ -14,10 +14,10 @@ body {
   box-shadow: -1px 0 0 0 #FF955B !important;
 }
 
-.el-button {
-
-  color:#16325C !important;
-}
+//.el-button {
+//
+//  color:#16325C !important;
+//}
 
 .el-select-dropdown__item {
 
